--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,265 @@
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
+html {
+    font-family: 'poppins', sans-serif;
+    font-size: 17px;
 }
 
-header {
-    background: #333;
-    color: #fff;
-    padding: 1rem 0;
-    text-align: center;
-}
-
-header h1 {
-    margin: 0;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    background: #444;
-}
-
-nav ul li {
-    margin: 0 1rem;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-section {
-    padding: 1rem;
-    margin: 1rem;
-    background: #fff;
-    border-radius: 5px;
+h1 {
+    margin: 5px;
+    font-size: 25px;
+    font-family: 'poppins-semibold', sans-serif;
 }
 
 h2 {
-    color: #333;
+    margin: 5px;
+    font-size: 14px;
+    font-family: 'poppins', sans-serif;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
+h3 {
+    margin: 5px;
+    font-size: 20px;
+    font-family: 'poppins-semibold', sans-serif;
+    color: #0050FF;
 }
 
-ul li {
-    background: #e4e4e4;
-    margin: 0.5rem 0;
-    padding: 0.5rem;
-    border-radius: 5px;
+a {
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
 }
 
-footer {
-    background: #333;
-    color: #fff;
+p {
+    margin: 5px;
+}
+
+.carre {
+    width: 16px;
+    height: 16px;
+    background-color: #0050FF;
+}
+
+.carre1 {
+    width: 20px;
+    height: 20px;
+    background-color: #0050FF;
+}
+
+.carre2 {
+    width: 13px;
+    height: 13px;
+    background-color: #0050FF;
+}
+
+.carre3 {
+    width: 10px;
+    height: 50px;
+    background-color: #0050FF;
+}
+
+/* Header */
+
+header {
+    color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 50px 30px 50px;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+}
+
+.header2 {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.actuel {
+    color: #0050FF;
+}
+
+/* Footer */
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14px;
+    padding: 30px 50px 30px 50px;
+}
+
+.footer2 {
+    display: flex;
+    align-items: center;
     text-align: center;
-    padding: 1rem 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+    column-gap: 30px;
+}
+
+/* Profil */
+.bodyprofil {
+    display: flex;
+    height: 100vh;
+    margin: 0;
+}
+
+.left {
+    flex: 0.4;
+    width: 1px;
+    background-color: #E6DACE;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (max-width: 1000px) {
+    .left {
+        width: 393px;
+        flex: none;
+    }
+}
+
+.profil {
+    position: relative;
+    right: -25vw;
+    text-align: center;
+    display: flex;
+}
+
+.profil1 {
+    background-color: #F4ECE6;
+    padding: 30px 50px;
+}
+
+.imgprofil {
+    position: relative;
+    width: 205px;
+    height: 205px;
+    border-radius: 100%;
+}
+
+.trait {
+    width: 50px;
+    height: 2px;
+    background-color: #0050FF;
+    margin: 20px auto;
+}
+
+.profilicon {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: white;
+    align-items: center;
+    padding: 10px 50px;
+}
+
+.bonton1 {
+    background-color: #0050FF;
+    color: white;
+    height: 35px;
+    width: 130px;
+    border: 1px solid #0050FF;
+    border-radius: 100px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+}
+
+.bonton1:hover {
+    background-color: white;
+    border-color: black;
+    color: black;
+}
+
+.bonton2 {
+    height: 35px;
+    width: 130px;
+    border: 1px solid black;
+    border-radius: 100px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+}
+
+.bonton2:hover {
+    background-color: #0050FF;
+    border-color: #0050FF;
+    color: white;
+}
+
+/* CV */
+
+.cvprojet {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 0;
+    background-color: #E6DACE;
+}
+
+.section {
+    display: flex;
+    margin: 20px 0;
+    background-color: white;
+    box-shadow: 10px 10px rgba(0,0,0,0.1);
+}
+
+.bonton3 {
+    background-color: #0050FF;
+    color: white;
+    height: 40px;
+    width: 160px;
+    border: 1px solid #0050FF;
+    border-radius: 100px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+}
+
+.bonton3:hover {
+    background-color: white;
+    border-color: black;
+    color: black;
+}
+
+.sectioncv2 {
+    justify-content: center;
+    padding: 10px 0;
+    width: 250px;
+    margin: 20px;
+}
+
+.sectioncv3 {
+    padding: 35px 0;
+    width: 345px;
+    margin: 20px;
+}
+
+.sectioncv4 {
+    padding: 10px 0;
+    margin: 20px;
+}
+
+.competencecv {
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.competencecv2 {
+    padding: 10px 0;
+}
+
+/* Projet */
+
+.sectionprojet1 {
+    display: flex;
+    flex-direction: column;
+    padding: 30px 0;
 }
