--- a/css/style.css
+++ b/css/style.css
@@ -262,4 +262,21 @@ header {
     display: flex;
     flex-direction: column;
     padding: 30px 0;
+    min-width: 400px;
+    max-width: 400px;
+}
+
+.image-container {
+    width: 600px;
+    height: 400px; /* Ajuste selon ton besoin */
+    position: relative;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
