--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,42 @@ p {
     background-color: #0050FF;
 }
 
+.bonton1 {
+    background-color: #0050FF;
+    color: white;
+    height: 35px;
+    width: 130px;
+    border: 1px solid #0050FF;
+    border-radius: 100px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+}
+
+.bonton1:hover {
+    background-color: white;
+    border-color: black;
+    color: black;
+}
+
+.bonton2 {
+    height: 35px;
+    width: 130px;
+    border: 1px solid black;
+    border-radius: 100px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+}
+
+.bonton2:hover {
+    background-color: #0050FF;
+    border-color: #0050FF;
+    color: white;
+}
+
 /* Header */
 
 header {
@@ -155,42 +191,6 @@ header {
     padding: 10px 50px;
 }
 
-.bonton1 {
-    background-color: #0050FF;
-    color: white;
-    height: 35px;
-    width: 130px;
-    border: 1px solid #0050FF;
-    border-radius: 100px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    display: flex;
-}
-
-.bonton1:hover {
-    background-color: white;
-    border-color: black;
-    color: black;
-}
-
-.bonton2 {
-    height: 35px;
-    width: 130px;
-    border: 1px solid black;
-    border-radius: 100px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    display: flex;
-}
-
-.bonton2:hover {
-    background-color: #0050FF;
-    border-color: #0050FF;
-    color: white;
-}
-
 /* CV */
 
 .cvprojet {
@@ -287,3 +287,157 @@ header {
     padding: 10px 0;
     margin: 20px;
 }
+
+/* Responsive */
+
+.resWidth {
+    width: 724px;
+}
+
+
+@media (max-width: 768px) {
+    html {
+        font-size: 12px;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+
+    h2 {
+        font-size: 10px;
+    }
+
+    h3 {
+        font-size: 15px;
+    }
+
+    .carre {
+        width: 11px;
+        height: 11px;
+    }
+
+    .carre1 {
+        width: 15px;
+        height: 15px;
+    }
+
+    .carre2 {
+        width: 8px;
+        height: 8px;
+    }
+
+    .carre3 {
+        width: 5px;
+        height: 30px;
+    }
+
+    p {
+        font-size: 10px;
+    }
+
+    a {
+        font-size: 10px;
+    }
+
+    .bonton1 {
+        height: 30px;
+        width: 120px;
+    }
+
+    .bonton2 {
+        height: 30px;
+        width: 120px;
+    }
+
+    .resWidth {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    html {
+        font-size: 10px;
+    }
+
+    h1 {
+        font-size: 15px;
+    }
+
+    h2 {
+        font-size: 10px;
+    }
+
+    h3 {
+        font-size: 10px;
+    }
+
+    .carre {
+        width: 6px;
+        height: 6px;
+    }
+
+    .carre1 {
+        width: 10px;
+        height: 10px;
+    }
+
+    .carre2 {
+        width: 3px;
+        height: 3px;
+    }
+
+    .carre3 {
+        width: 2px;
+        height: 20px;
+    }
+
+    p {
+        font-size: 10px;
+    }
+
+    a {
+        font-size: 10px;
+    }
+
+    .bonton1 {
+        height: 25px;
+        width: 110px;
+    }
+
+    .bonton2 {
+        height: 25px;
+        width: 110px;
+    }
+
+    .resWidth {
+        width: 100%;
+    }
+}
+
+@media (max-width: 400px) {
+    header {
+        flex-direction: column;
+    }
+
+    h1. {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 550px) {
+    .footer {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer2 {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    idframe {
+        width: 100%;
+    }
+}
+
