--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ header {
     top: 70px; /* Ajuste selon la hauteur de votre header */
     right: 20px;
     background-color: white;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     overflow: hidden;
     flex-direction: column;
