--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,7 @@ header {
     text-align: left;
     width: 100%;
     font-size: 16px;
+    box-shadow: 10px 10px rgba(0,0,0,0.1);
 }
 
 .sheet-button:hover {
