--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,14 @@ header {
     width: 150px;
 }
 
+.bonton-container {
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    gap: 20px;
+    margin: 0 10px
+}
+
 /* Escalade */
 .sectionEscalade {
     justify-content: center;
