--- a/css/style.css
+++ b/css/style.css
@@ -81,16 +81,16 @@ p {
     text-align: center;
     border-radius: 100px;
     cursor: pointer;
-    transition: transform 0.2s ease; /* Ajout d'une transition pour le hover */
+    transition: transform 0.2s ease;
 }
 
-.button p { /* Style pour le texte à l'intérieur du bouton */
+.button p {
     margin: 0;
-    transition: font-size 0.2s ease; /* Transition pour la taille de police */
+    transition: font-size 0.2s ease;
 }
 
 .button:hover {
-    transform: scale(1.05); /* Effet de grossissement au survol */
+    transform: scale(1.05);
 }
 
 .button:hover p {
@@ -100,35 +100,34 @@ p {
 .button-primary {
     background: linear-gradient(to right, #0050FF, #7f3bcf) border-box;
     color: white;
-    border: none; /* Assurer qu'il n'y a pas de bordure par défaut */
+    border: none;
 }
 
 .button-secondary {
     border: 1px solid black;
     color: black;
-    background-color: white; /* Fond blanc pour le bouton secondaire */
+    background-color: white;
 }
 
 /* Specific button sizes (can be combined with .button, .button-primary/secondary) */
-.button-size-sm { /* Corresponds à bonton1 et bonton2 */
+.button-size-sm {
     height: 35px;
     width: 130px;
 }
 
-.button-size-md { /* Corresponds à bonton3 */
+.button-size-md {
     height: 40px;
     width: 160px;
 }
 
 .section {
     display: flex;
-    margin: 30px 0; /* Augmentation de la marge verticale */
+    margin: 30px 0;
     background-color: white;
     box-shadow: 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Header */
-
 header {
     color: black;
     display: flex;
@@ -175,7 +174,7 @@ header {
 .burger-nav {
     display: none;
     position: absolute;
-    top: 70px; /* Ajuste selon la hauteur de votre header */
+    top: 70px;
     right: 20px;
     background-color: white;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -305,13 +304,11 @@ header {
     text-align: center
 }
 
-/* Ajout d'une marge sous les titres H1 des sections principales */
 .mt-50 > h1 {
     margin-bottom: 15px;
 }
 
 /* CV */
-
 .cvprojet {
     display: flex;
     justify-content: center;
@@ -323,26 +320,26 @@ header {
 
 .sectioncv2 {
     justify-content: center;
-    padding: 20px; /* Augmentation du padding */
+    padding: 20px;
     width: 250px;
     margin: 20px;
 }
 
 .sectioncv3 {
-    padding: 20px; /* Ajustement du padding */
-    width: 345px;
+    padding: 20px;
+    width: 700px;
     margin: 20px;
 }
 
 .sectioncv4 {
-    padding: 20px; /* Augmentation du padding */
+    padding: 20px;
     margin: 20px;
 }
 
 .competencecv {
     display: flex;
     align-items: center;
-    padding: 15px 0; /* Augmentation du padding vertical */
+    padding: 15px 0;
 }
 
 .competencecv2 {
