--- a/css/style.css
+++ b/css/style.css
@@ -512,8 +512,9 @@ header {
 
 /* Apprentissage */
 .button-back-apprentissage {
-    padding: 10px;
+    padding: 10px 0 0 10px;
     background-color: #E6DACE;
+    border-color: #E6DACE;
 }
 
 .section1-apprentissage {
@@ -521,7 +522,6 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 30px 0;
     background-color: #E6DACE;
 }
 
@@ -529,11 +529,11 @@ header {
     display: flex;
     flex-direction: column;
     padding: 30px 0;
-    width: 550px;
+    width: 700px;
 }
 
 .section3-apprentissage {
-    width: 400px;
+    width: 450px;
     border-radius: 10px;
     padding: 10px;
     margin: 20px;
