--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,49 @@ header {
     padding: 10px 0;
 }
 
+.skill-circle {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    overflow: hidden;
+}
+
+.skill-circle-inner {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    background-color: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+}
+
+.skill-percent {
+    font-weight: bold;
+}
+
+.skill-circle::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: linear-gradient(to right, #0050FF, #7f3bcf);
+    mask: conic-gradient(from 0deg, #000 0%, #000 var(--mask-angle), transparent var(--mask-angle), transparent 100%);
+}
+
 /* Projet */
 
 .sectionprojet1 {
