--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,15 @@ p {
     width: 160px;
 }
 
+.base {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 0;
+    background-color: #F4ECE6;
+}
+
 .section {
     display: flex;
     margin: 30px 0;
@@ -378,14 +387,6 @@ header {
 }
 
 /* CV */
-.cvprojet {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 30px 0;
-    background-color: #E6DACE;
-}
 
 .sectioncv2 {
     justify-content: center;
@@ -564,8 +565,8 @@ header {
 /* Apprentissage */
 .button-back-apprentissage {
     padding: 10px 0 0 10px;
-    background-color: #E6DACE;
-    border-color: #E6DACE;
+    background-color: #F4ECE6;
+    border-color: #F4ECE6;
 }
 
 .section1-apprentissage {
@@ -573,7 +574,7 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #E6DACE;
+    background-color: #F4ECE6;
 }
 
 .section2-apprentissage {
@@ -1021,13 +1022,13 @@ header {
         padding: 5px 0;
     }
 
-    .cvprojet > .resWidth > .d-flex.justify-content-end {
+    .base > .resWidth > .d-flex.justify-content-end {
         justify-content: center !important;
         margin-top: 10px;
         margin-bottom: 10px;
     }
 
-    .cvprojet > .resWidth > .d-flex.justify-content-end .button-size-md {
+    .base > .resWidth > .d-flex.justify-content-end .button-size-md {
         width: 100%;
         max-width: 250px;
     }
