--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,13 @@ header {
     margin: 20px;
 }
 
+.sectioncv5 {
+    padding: 20px;
+    width: 90%;
+    margin: 20px;
+    max-width: 1300px;
+}
+
 .competencecv {
     display: flex;
     align-items: center;
