--- a/css/style.css
+++ b/css/style.css
@@ -791,6 +791,10 @@ header {
     padding-right: 10px;
 }
 
+#modalProjectDescription p {
+    padding: 2.5px 0;
+}
+
 .modal-left-content h4 {
     margin-top: 20px;
     margin-bottom: 10px;
@@ -805,7 +809,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    margin-top: 25px;
+    margin-top: 15px;
 }
 
 .modal-links-container .form-btn {
